// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Nav List Page Snapshot : isSelect=false 1`] = `
<div>
  <ul
    class="nav-list-wrapper css-2yaic1"
  >
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Modal"
      >
        <span
          class="mcm-span-unit css-1oteowz"
        >
          Modal
        </span>
      </a>
    </li>
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Slick"
      >
        <span
          class="mcm-span-unit css-1oteowz"
        >
          Slick
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`Layout Nav List Page Snapshot : isSelect=true 1`] = `
<div>
  <ul
    class="nav-list-wrapper nav-list-select-wrapper css-19gtpsr"
  >
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Modal"
      >
        <span
          class="mcm-span-unit css-1oteowz"
        >
          Modal
        </span>
      </a>
    </li>
    <li>
      <a
        class="mcm-link-unit css-1h5x3dy"
        href="/modules/Slick"
      >
        <span
          class="mcm-span-unit css-1oteowz"
        >
          Slick
        </span>
      </a>
    </li>
  </ul>
</div>
`;
